# adv_hpc

./: CMakeLists.txt  README.md  test_ex1.sh  test_ex2.sh
cmake/Modules/: FindNCCL.cmake
ex1/: blas.json  create_plots.py  gpu.json  matr_mult.c  naive.json  test_matr_mult.py
ex2/: jacobi.c  make_plots.py  render_jacobi.py  test_jacobi.py
